--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "execa": "^5.1.1",
     "find-cache-dir": "^3.3.2",
     "globby": "^11",
-    "mri": "^1.2.0"
+    "mri": "^1.2.0",
+    "prettier": "^2.4.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
@@ -40,7 +41,6 @@
     "@types/prettier": "^2.3.2",
     "@types/react": "^17.0.24",
     "esbuild": "^0.13.1",
-    "prettier": "^2.4.1",
     "typescript": "^4.4.3"
   }
 }
