--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
   "scripts": {
     "prepare": "yarn build",
     "lint": "DEBUG=recommended node cli.js",
+    "test": "jest",
     "dev": "yarn build --watch",
     "prebuild": "rm -rf dist",
     "build": "esbuild $npm_package_source --outfile=$npm_package_main --platform=node --target=node12 --format=cjs"
+  },
+  "jest": {
+    "preset": "es-jest",
+    "collectCoverageFrom": [
+      "src/**"
+    ]
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -37,10 +44,13 @@
     "@types/debug": "^4.1.7",
     "@types/eslint": "^7.28.0",
     "@types/find-cache-dir": "^3.2.1",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.9.6",
     "@types/prettier": "^2.3.2",
     "@types/react": "^17.0.24",
+    "es-jest": "^1.3.0",
     "esbuild": "^0.13.1",
+    "jest": "^27.2.4",
     "typescript": "^4.4.3"
   }
 }
