--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "description": "Run Prettier/ESLint with `recommended` configs",
   "license": "MIT",
+  "repository": "ambar/recommended",
   "source": "src/index.ts",
   "main": "dist/index.js",
   "bin": "cli.js",
@@ -17,7 +18,7 @@
     "test": "jest",
     "dev": "yarn build --watch",
     "prebuild": "rm -rf dist",
-    "build": "esbuild $npm_package_source --outfile=$npm_package_main --platform=node --target=node12 --format=cjs"
+    "build": "node scripts/esbuild.mjs"
   },
   "jest": {
     "preset": "es-jest",
@@ -38,8 +39,11 @@
     "execa": "^5.1.1",
     "find-cache-dir": "^3.3.2",
     "globby": "^11",
+    "jsonc-parser": "^3.0.0",
+    "kleur": "^3",
     "mri": "^1.2.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "prompts": "^2.4.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
@@ -48,10 +52,20 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.9.6",
     "@types/prettier": "^2.3.2",
+    "@types/prompts": "^2.0.14",
     "@types/react": "^17.0.24",
     "es-jest": "^1.3.0",
     "esbuild": "^0.13.1",
     "jest": "^27.2.4",
     "typescript": "^4.4.3"
-  }
+  },
+  "keywords": [
+    "lint",
+    "style",
+    "eslint",
+    "prettier",
+    "typescript",
+    "standard",
+    "xo"
+  ]
 }
