--- a/recommended/package.json
+++ b/recommended/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recommended",
-  "version": "0.0.4",
+  "version": "0.0.5-0",
   "description": "Run Prettier/ESLint with `recommended` configs",
   "license": "MIT",
   "repository": "ambar/recommended",
