--- a/package.json
+++ b/package.json
@@ -6,10 +6,20 @@
     "@recommended/*"
   ],
   "scripts": {
+    "test": "jest",
     "lint": "DEBUG=recommended recommended",
     "lint:fix": "DEBUG=recommended recommended --fix"
   },
+  "jest": {
+    "preset": "es-jest",
+    "collectCoverageFrom": [
+      "recommended/src/**"
+    ]
+  },
   "devDependencies": {
-    "esbuild": "^0.13.4"
+    "@types/jest": "^27.0.2",
+    "es-jest": "^1.3.0",
+    "esbuild": "^0.13.4",
+    "jest": "^27.2.4"
   }
 }
