--- a/@recommended/eslint-plugin-import/package.json
+++ b/@recommended/eslint-plugin-import/package.json
@@ -7,6 +7,7 @@
     "dist"
   ],
   "scripts": {
+    "prepack": "yarn build",
     "prebuild": "rm -rf dist",
     "build": "esbuild . --outfile=$npm_package_main --bundle --platform=node --external:typescript --external:eslint --external:tsconfig-paths --external:doctrine --external:minimatch --external:debug",
     "build:inspect": "yarn build --sourcemap && source-map-explorer $npm_package_main"
