--- a/recommended/package.json
+++ b/recommended/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recommended",
-  "version": "0.0.5-0",
+  "version": "0.0.6-0",
   "description": "Run Prettier/ESLint with `recommended` configs",
   "license": "MIT",
   "repository": "ambar/recommended",
@@ -23,7 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "debug": "^4.3.2",
-    "eslint": "^7.32.0",
+    "eslint": "npm:@recommended/eslint@^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "npm:@recommended/eslint-plugin-import@^2.24.2",
