chore: update dep

--- a/recommended/package.json
+++ b/recommended/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recommended",
-  "version": "0.0.6-0",
+  "version": "0.0.6-2",
   "description": "Run Prettier/ESLint with `recommended` configs",
   "license": "MIT",
   "repository": "ambar/recommended",
@@ -23,11 +23,11 @@
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "debug": "^4.3.2",
-    "eslint": "npm:@recommended/eslint@^7.32.0",
+    "eslint": "npm:@recommended/eslint@^7.32.1-1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "npm:@recommended/eslint-plugin-import@^2.24.2",
-    "eslint-plugin-react": "npm:@recommended/eslint-plugin-react@^7.26.1",
+    "eslint-plugin-import": "npm:@recommended/eslint-plugin-import@^2.24.3-1",
+    "eslint-plugin-react": "npm:@recommended/eslint-plugin-react@^7.26.2-1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "execa": "^5.1.1",
     "find-cache-dir": "^3.3.2",
