--- a/recommended/package.json
+++ b/recommended/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recommended",
-  "version": "0.0.6-3",
+  "version": "0.0.6",
   "description": "Run Prettier/ESLint with `recommended` configs",
   "license": "MIT",
   "repository": "ambar/recommended",
@@ -23,7 +23,7 @@
     "@recommended/eslint-config": "^1.0.0",
     "@recommended/prettier-config": "^1.0.0",
     "debug": "^4.3.2",
-    "eslint": "npm:@recommended/eslint@^7.32.1-1",
+    "eslint": "npm:@recommended/eslint@^7.32.1-2",
     "execa": "^5.1.1",
     "find-cache-dir": "^3.3.2",
     "globby": "^11",
