feat: replace find-cache-dir with escalade

--- a/recommended/package.json
+++ b/recommended/package.json
@@ -23,9 +23,9 @@
     "@recommended/eslint-config": "^1.0.0",
     "@recommended/prettier-config": "^1.0.0",
     "debug": "^4.3.2",
+    "escalade": "^3.1.1",
     "eslint": "npm:@recommended/eslint@^7.32.1-2",
     "execa": "^5.1.1",
-    "find-cache-dir": "^3.3.2",
     "globby": "^11",
     "jsonc-parser": "^3.0.0",
     "kleur": "^3",
