--- a/@recommended/eslint-plugin-import/package.json
+++ b/@recommended/eslint-plugin-import/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@recommended/eslint-plugin-import",
-  "version": "2.24.3-1",
+  "version": "2.25.3-1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -18,9 +18,9 @@
     "debug": "^2.6.9"
   },
   "peerDependencies": {
-    "eslint": "^2 || ^3 || ^4 || ^5 || ^6 || ^7.2.0"
+    "eslint": "^2 || ^3 || ^4 || ^5 || ^6 || ^7.2.0 || ^8"
   },
   "devDependencies": {
-    "eslint-plugin-import": "^2.24.2"
+    "eslint-plugin-import": "^2.25.2"
   }
 }
