--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,20 +14,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+      - name: setup
+        run: |
+          corepack enable
+          yarn
+          yarn setup
       - name: test
         run: |
-          yarn
-          yarn jest --coverage
+          yarn test:coverage
       - name: report
-        uses: coverallsapp/github-action@v1.0.1
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ./coverage/lcov.info
