--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ dist
 # Files
 *.log
 .DS_Store
+
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
