--- a/@recommended/eslint-config/package.json
+++ b/@recommended/eslint-config/package.json
@@ -9,13 +9,13 @@
     "directory": "@recommended/eslint-config"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "npm:@recommended/eslint-plugin-import@^2.24.3-1",
-    "eslint-plugin-react": "npm:@recommended/eslint-plugin-react@^7.26.2-1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "globby": "^11"
   }
 }
