--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "private": true,
   "license": "MIT",
   "workspaces": [
+    ".",
     "recommended",
     "@recommended/*"
   ],
   "scripts": {
-    "build": "yarn workspaces run build",
-    "test": "jest",
+    "build": "yarn workspace recommended run build",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:coverage": "npm run test -- --coverage",
     "lint": "DEBUG=recommended recommended",
     "lint:fix": "DEBUG=recommended recommended --fix"
   },
@@ -18,9 +20,11 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "es-jest": "^1.3.0",
-    "esbuild": "^0.13.4",
-    "jest": "^27.2.4"
-  }
+    "@types/jest": "^29.5.12",
+    "es-jest": "^2.1.0",
+    "esbuild": "^0.20.2",
+    "jest": "^29.7.0",
+    "recommended": "workspace:*"
+  },
+  "packageManager": "yarn@4.1.1"
 }
