--- a/@recommended/eslint-config/package.json
+++ b/@recommended/eslint-config/package.json
@@ -2,6 +2,7 @@
   "name": "@recommended/eslint-config",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -9,6 +10,7 @@
     "directory": "@recommended/eslint-config"
   },
   "dependencies": {
+    "@eslint/js": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint-config-prettier": "^9.1.0",
