--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,10 @@ jobs:
         run: |
           corepack enable
           yarn
-          yarn setup
-      - name: test
-        run: |
-          yarn test:coverage
-      - name: report
-        uses: coverallsapp/github-action@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: test
+      #   run: |
+      #     yarn test:coverage
+      # - name: report
+      #   uses: coverallsapp/github-action@v2
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
