feat: change arrowParentheses=always

--- a/@recommended/biome-config/biome.json
+++ b/@recommended/biome-config/biome.json
@@ -16,7 +16,7 @@
     "formatter": {
       "quoteStyle": "single",
       "semicolons": "asNeeded",
-      "arrowParentheses": "asNeeded",
+      "arrowParentheses": "always",
       "trailingComma": "all",
       "bracketSpacing": false
     }
